# stats

./: README.md  pyproject.toml  requirements.txt  ridge_regression.ipynb
notebooks/: GLM.md  bag_of_words.ipynb  bayesian_regression.ipynb  count_regression.ipynb  design_matrices.ipynb  gradient_descent.ipynb  linear_regression.ipynb  local_regression.ipynb  market_basket_analysis.ipynb  mlp.ipynb  negative-binomial.ipynb  pca.ipynb  poly_regression.ipynb  probability_distributions.ipynb  smoothing_splines.ipynb  tSNE.ipynb  wages.ipynb
