[project]
name = "stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "patsy>=1.0.1",
    "pygam>=0.10.1",
    "scikit-fda>=0.10.1",
    "scikit-learn>=1.7.2",
]
